--- a/source/form.html
+++ b/source/form.html
@@ -2,20 +2,16 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Кэт энерджи</title>
-
-    <!---
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Кэт энерджи. Подбор программы.</title>
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    --->
-
+    <link href="css/style.css" rel="stylesheet"> -->
   </head>
   <body>
     <header class="page-header">
       <nav class="main-nav">
         <div class="main-nav__wrapper">
-          <a href="#" class="main-nav__logo">
+          <a href="index.html" class="main-nav__logo">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="191" height="39" viewBox="0 0 190.4 37.6" style="enable-background:new 0 0 190.4 37.6;" xml:space="preserve">
               <style type="text/css">
                 .st0{fill:#FDC305;}
@@ -55,91 +51,67 @@
         </div>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a href="#" class="site-list__link-to-page site-list__link-to-page--active">Главная</a>
+            <a href="index.html" class="site-list__link-to-page">Главная</a>
           </li>
           <li class="site-list__item">
             <a href="catalog.html" class="site-list__link-to-page">Каталог продукции</a>
           </li>
           <li class="site-list__item">
-            <a href="form.html" class="site-list__link-to-page">Подбор программы</a>
+            <a href="#" class="site-list__link-to-page site-list__link-to-page--active">Подбор программы</a>
           </li>
         </ul>
       </nav>
     </header>
-    <main class="page-main">
-      <div class="product-preview">
-        <div class="product-preview__wrapper">
-          <h1 class="product-preview__title">Функциональное питание для котов</h1>
-          <p class="product-preview__text">Занялся собой? Займись котом!</p>
-        </div>
-        <img class="product-preview__food-pic" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Фото корма для котов">
-        <a href="form.html" class="product-preview__btn-program btn--green">Подобрать программу</a>
-      </div>
-      <ul class="programs">
-        <li class="programs__item">
-          <h2 class="programs__title programs__title--slim">Похудение</h2>
-          <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a href="#" class="programs__catalog-link">Каталог Slim</a>
-        </li>
-        <li class="programs__item">
-          <h2 class="programs__title programs__title--pro">Набор массы</h2>
-          <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a href="#" class="programs__catalog-link">Каталог Pro</a>
-        </li>
-      </ul>
-      <section class="advantages">
-        <h2 class="advantages__title">Как это работает</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--healthy">Функциональное питание содержит только полезные питательные вещества.</li>
-          <li class="advantages__item advantages__item--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-          <li class="advantages__item advantages__item--food-amount">Замените один-два приема обычной еды на наше функциональное питание.</li>
-          <li class="advantages__item advantages__item--month-later">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
-        </ul>
-      </section>
-      <!--
-      <section class="example">
-        <div class="example__main-wrapper example__main-wrapper--left">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-          <div class="example__wrapper-table">
-            <div class="example__wrapper">
-              <dl class="example__weight">
-                <dt class="example__term">5 кг</dt>
-                <dd class="example__definition">Снижение веса</dd>
-              </dl>
-              <dl class="example__time">
-                <dt class="example__term">60 дней</dt>
-                <dd class="example__definition">Затрачено времени</dd>
-              </dl>
-            </div>
-            <p class="example__spent-money">Затраты на питание: 15 000 руб.</p>
+    <main class="page-main order-page">
+      <!-- <h1 class="order-page__form-title">Подбор программы</h1>
+      <form action="https://echo.form.html" class="order-form" method="post">
+        <p class="order-form__description">Заполните анкету и мы подберем программу питания для вашего кота</p>
+        <fieldset class="field-group field-group--no-legend cat-data">
+          <div class="field-group__container">
+            <label class="field-group__label">Имя:*<input type="text" class="field-group__input" name="cat-name" value="Барсик" required></label>
+            <label class="field-group__label">Вес (кг):*<input type="number" class="field-group__input" name="cat-weight" value="7" required></label>
+            <label class="field-group__label field-group__label--last-input">Возраст (лет):<input type="number" class="field-group__input" name="cat-age" value="7"></label>
           </div>
-        </div>
-        <div class="example__main-wrapper example__main-wrapper--right">
-          <img class="example__before" src="img/before-mobile@1x.png" width="311" height="232" alt="Борис до программы">
-          <img class="example__after"  src="" width="251" height="240" alt="Борис после программы">
-          <div class="example__container">
-            <span class="example__before-text">Было</span>
-            <div class="example__range">
-              <div class="example__slider example__slider--white-back">
-                <div class="example__slider example__slider--green-back"></div>
-              </div>
-            </div>
-            <span class="example__after-text">Стало</span>
+          <div class="field-group__radio-series">
+            <label class="field-group__label field-group__label--radio"><input type="radio" class="field-group__radio" name="program-type" value="slim" checked>Похудение</label>
+            <label class="field-group__label field-group__label--radio"><input type="radio" class="field-group__radio" name="program-type" value="pro">Набор массы</label>
+            <label class="field-group__label field-group__label--radio field-group__label--last-input"><input type="radio" class="field-group__radio" name="program-type" value="need-help">Не знаю (Нужен ваш совет)</label>
           </div>
-        </div>
-      </section>
+        </fieldset>
+        <fieldset class="field-group owner-contacts">
+          <legend class="field-group__title field-group__title--width">Контактные данные (владельца кота)</legend>
+          <div class="owner-contacts__wrapper">
+            <label class="field-group__label field-group__label--left field-group__label--desktop-bottom">E-mail:*<input type="email" class="field-group__input" name="owner-email" value="kuklachev@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required></label>
+            <label class="field-group__label field-group__label--last-input">Телефон:*<input type="tel" class="field-group__input" name="owner-tel" value="8 (960) 900-60-90" pattern="[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}" required></label>
+          </div>
+        </fieldset>
+        <fieldset class="field-group comment">
+          <legend class="field-group__title">Комментарий</legend>
+          <label class="field-group__label field-group__label--last-input"><textarea name="comment" class="field-group__textarea">Расскажите обо всех повадках кота</textarea></label>
+        </fieldset>
+        <fieldset class="extra-field-group">
+          <legend class="extra-field-group__title">Дополнительно</legend>
+          <div class="extra-field-group__wrapper">
+            <label class="extra-field-group__label"><input type="checkbox" class="extra-field-group__checkbox" name="sweetener" checked>Сахарозаменитель</label>
+            <label class="extra-field-group__label"><input type="checkbox" class="extra-field-group__checkbox" name="water">Питьевая вода</label>
+            <label class="extra-field-group__label"><input type="checkbox" class="extra-field-group__checkbox" name="milk">Молоко</label>
+            <label class="extra-field-group__label extra-field-group__label--last-input"><input type="checkbox" class="extra-field-group__checkbox" name="vitamins">Витамины</label>
+          </div>
+        </fieldset>
+        <input type="submit" class="order-form__submit btn--green" value="Отправить заявку">
+        <small class="order-form__note">* — Обязательные поля</small>
+      </form>
       <section class="contacts">
-        <div class="contacts__wrapper">
+        <div class="contacts__wrapper contacts__wrapper--grey-back">
           <h2 class="contacts__title visually-hidden">Адрес нашего магазаина</h2>
           <p class="contacts__invite">Приглашаем<br>к сотрудничеству дилеров!</p>
           <p class="contacts__detailed">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <img class="contacts__on-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Адрес на карте">
-      </section> --->
+      </section> -->
     </main>
     <footer class="page-footer">
-      <a href="#" class="page-footer__logo">
+      <a href="index.html" class="page-footer__logo">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="128" height="24" viewBox="0 0 127.8 23.4" style="enable-background:new 0 0 127.8 23.4;" xml:space="preserve">
           <style type="text/css">
             .st0 {fill: #111111;}
@@ -168,8 +140,11 @@
         <li class="social__item">
           <a href="#" class="social__link social__link--instagram">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16" height="16" viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
+              <style type="text/css">
+                .st0{fill:#231F20;}
+              </style>
               <path d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8 M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
-              <path d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9M8,3.9C5.7,3.9,3.9,5.7,3.9,8s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
+              <path d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8 s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
               <circle cx="12.3" cy="3.7" r="0.9"/>
             </svg>
           </a>
