--- a/source/catalog.html
+++ b/source/catalog.html
@@ -70,7 +70,7 @@
       <section class="product-catalog">
         <h2 class="product-catalog__title">Каталог продукции</h2>
         <article class="card-product">
-          <div class="card-product__container">
+          <div class="card-product__container"> <!-- Обертка всей карточки кроме кнопки? Если нужно, то сменить название -->
             <a href="#" class="card-product__image-description-link" title="Описание товара">
               <img class="card-product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г, курица">
             </a>
@@ -94,7 +94,7 @@
               </table>
             </div>
           </div>
-          <a href="#" class="card-product__order-link btn--green">Заказать</a>
+          <a href="#" class="card-product__order-link btn--green">Заказать</a> <!-- Класс для модификатора кнопки? -->
         </article>
         <article class="card-product">
           <div class="card-product__container">
@@ -264,14 +264,14 @@
           </svg>
           <p class="show-more__show-products">Показать еще 100500 товаров</p>
           <p class="show-more__text-detail">На самом деле вкусов гораздо больше!</p>
-          <a href="#" class="show-more__link-more btn--grey">Показать все</a>
+          <a href="#" class="show-more__link-more btn--grey">Показать все</a> <!-- Модифиикатор кнопки? -->
         </div>
       </section>
-      <!-- <section class="extra-catalog">
+      <section class="extra-catalog">
         <h2 class="extra-catalog__title">Дополнительные товары</h2>
         <ul class="extra-catalog__list">
           <li class="extra-card-product">
-            <div class="extra-card-product__wrapper">
+            <div class="extra-card-product__wrapper"> <!-- Нужна ли обертка? можно ли заменить внутренности грид-раскладкой? -->
               <h3 class="extra-card-product__title">
                 <a href="#" class="extra-card-product__text-description-link">Сахарозаменитель</a>
               </h3>
@@ -338,7 +338,7 @@
           <p class="contacts__detailed">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <img class="contacts__on-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Адрес на карте">
-      </section> -->
+      </section>
     </main>
     <footer class="page-footer">
       <a href="index.html" class="page-footer__logo">
