--- a/source/form.html
+++ b/source/form.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи. Подбор программы.</title>
+
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet"> -->
+
   </head>
   <body>
     <header class="page-header">
@@ -63,11 +65,11 @@
       </nav>
     </header>
     <main class="page-main order-page">
-      <!-- <h1 class="order-page__form-title">Подбор программы</h1>
-      <form action="https://echo.form.html" class="order-form" method="post">
+      <h1 class="order-page__form-title">Подбор программы</h1>
+      <form action="https://echo.htmlacademy.ru" class="order-form" method="post">
         <p class="order-form__description">Заполните анкету и мы подберем программу питания для вашего кота</p>
         <fieldset class="field-group field-group--no-legend cat-data">
-          <div class="field-group__container">
+          <div class="field-group__container"> <!-- Сменить название класса -->
             <label class="field-group__label">Имя:*<input type="text" class="field-group__input" name="cat-name" value="Барсик" required></label>
             <label class="field-group__label">Вес (кг):*<input type="number" class="field-group__input" name="cat-weight" value="7" required></label>
             <label class="field-group__label field-group__label--last-input">Возраст (лет):<input type="number" class="field-group__input" name="cat-age" value="7"></label>
@@ -80,7 +82,7 @@
         </fieldset>
         <fieldset class="field-group owner-contacts">
           <legend class="field-group__title field-group__title--width">Контактные данные (владельца кота)</legend>
-          <div class="owner-contacts__wrapper">
+          <div class="owner-contacts__wrapper"> <!-- Потребность в обертке? -->
             <label class="field-group__label field-group__label--left field-group__label--desktop-bottom">E-mail:*<input type="email" class="field-group__input" name="owner-email" value="kuklachev@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required></label>
             <label class="field-group__label field-group__label--last-input">Телефон:*<input type="tel" class="field-group__input" name="owner-tel" value="8 (960) 900-60-90" pattern="[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}" required></label>
           </div>
@@ -91,14 +93,14 @@
         </fieldset>
         <fieldset class="extra-field-group">
           <legend class="extra-field-group__title">Дополнительно</legend>
-          <div class="extra-field-group__wrapper">
+          <div class="extra-field-group__wrapper"> <!-- Потребность в обертке? -->
             <label class="extra-field-group__label"><input type="checkbox" class="extra-field-group__checkbox" name="sweetener" checked>Сахарозаменитель</label>
             <label class="extra-field-group__label"><input type="checkbox" class="extra-field-group__checkbox" name="water">Питьевая вода</label>
             <label class="extra-field-group__label"><input type="checkbox" class="extra-field-group__checkbox" name="milk">Молоко</label>
             <label class="extra-field-group__label extra-field-group__label--last-input"><input type="checkbox" class="extra-field-group__checkbox" name="vitamins">Витамины</label>
           </div>
         </fieldset>
-        <input type="submit" class="order-form__submit btn--green" value="Отправить заявку">
+        <input type="submit" class="order-form__submit btn--green" value="Отправить заявку"> <!-- Класс модификатора? -->
         <small class="order-form__note">* — Обязательные поля</small>
       </form>
       <section class="contacts">
@@ -108,7 +110,7 @@
           <p class="contacts__detailed">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <img class="contacts__on-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Адрес на карте">
-      </section> -->
+      </section>
     </main>
     <footer class="page-footer">
       <a href="index.html" class="page-footer__logo">
