--- a/source/index.html
+++ b/source/index.html
@@ -68,7 +68,7 @@
     </header>
     <main class="page-main">
       <div class="product-preview">
-        <div class="product-preview__wrapper">
+        <div class="product-preview__wrapper"> <!-- Можно ли обойтись без див-обертки? -->
           <h1 class="product-preview__title">Функциональное питание для котов</h1>
           <p class="product-preview__text">Занялся собой? Займись котом!</p>
         </div>
@@ -96,12 +96,11 @@
           <li class="advantages__item advantages__item--month-later">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
         </ul>
       </section>
-      <!--
       <section class="example">
-        <div class="example__main-wrapper example__main-wrapper--left">
+        <div class="example__main-wrapper example__main-wrapper--left"> <!-- Целесообразность обертки? -->
           <h2 class="example__title">Живой пример</h2>
           <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-          <div class="example__wrapper-table">
+          <div class="example__wrapper-table"> <!-- Целесообразность обертки? -->
             <div class="example__wrapper">
               <dl class="example__weight">
                 <dt class="example__term">5 кг</dt>
@@ -115,9 +114,9 @@
             <p class="example__spent-money">Затраты на питание: 15 000 руб.</p>
           </div>
         </div>
-        <div class="example__main-wrapper example__main-wrapper--right">
+        <div class="example__main-wrapper example__main-wrapper--right"> <!-- Целесообразность обертки? -->
           <img class="example__before" src="img/before-mobile@1x.png" width="311" height="232" alt="Борис до программы">
-          <img class="example__after"  src="" width="251" height="240" alt="Борис после программы">
+          <!-- <img class="example__after"  src="" width="251" height="240" alt="Борис после программы"> -->
           <div class="example__container">
             <span class="example__before-text">Было</span>
             <div class="example__range">
@@ -136,7 +135,7 @@
           <p class="contacts__detailed">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <img class="contacts__on-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Адрес на карте">
-      </section> --->
+      </section>
     </main>
     <footer class="page-footer">
       <a href="#" class="page-footer__logo">
