--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Кэт энерджи. Каталог продукции.</title>
 
-    <!--
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
-    -->
+
 
   </head>
   <body>
