--- a/source/form.html
+++ b/source/form.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>Кэт энерджи. Подбор программы.</title>
 
-    <!-- <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
 
   </head>
   <body>
