--- a/source/form.html
+++ b/source/form.html
@@ -108,7 +108,7 @@
         <div class="contacts__wrapper contacts__wrapper--grey-back">
           <h2 class="contacts__title visually-hidden">Адрес нашего магазаина</h2>
           <p class="contacts__invite">Приглашаем<br>к сотрудничеству дилеров!</p>
-          <p class="contacts__detailed">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <p class="contacts__detailed">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
         <img class="contacts__on-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Адрес на карте">
       </section>
@@ -162,7 +162,7 @@
       </ul>
       <p class="page-footer__copyright copyright"> HTML Academy
         <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">
-          <svg xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="0 0 60 60">
+          <svg xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="10 10 40 40">
             <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
           </svg>
         </a>
