--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="page-header">
       <nav class="main-nav">
-        <div class="main-nav__wrapper">
+        <div class="main-nav__wrapper container">
           <a href="#" class="main-nav__logo">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="191" height="39" viewBox="0 0 190.4 37.6" style="enable-background:new 0 0 190.4 37.6;" xml:space="preserve">
               <style type="text/css">
@@ -52,55 +52,57 @@
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
-        <ul class="main-nav__list site-list">
+        <ul class="main-nav__list site-list site-list--index">
           <li class="site-list__item">
-            <a href="#" class="site-list__link-to-page site-list__link-to-page--active">Главная</a>
+            <a href="#" class="site-list__link-to-page site-list__link-to-page--index site-list__link-to-page--active">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="catalog.html" class="site-list__link-to-page">Каталог продукции</a>
+            <a href="catalog.html" class="site-list__link-to-page site-list__link-to-page--index">Каталог продукции</a>
           </li>
           <li class="site-list__item">
-            <a href="form.html" class="site-list__link-to-page">Подбор программы</a>
+            <a href="form.html" class="site-list__link-to-page site-list__link-to-page--index">Подбор программы</a>
           </li>
         </ul>
       </nav>
     </header>
     <main class="page-main">
-      <div class="product-preview">
-        <div class="product-preview__wrapper"> <!-- Можно ли обойтись без див-обертки? -->
-          <h1 class="product-preview__title">Функциональное питание для котов</h1>
-          <p class="product-preview__text">Занялся собой? Займись котом!</p>
+      <div class="product-preview container">
+        <div class="product-preview__main-wrapper">
+          <div class="product-preview__second-wrapper">
+            <h1 class="product-preview__title">Функциональное питание для котов</h1>
+            <p class="product-preview__text">Занялся собой? Займись котом!</p>
+          </div>
+          <img class="product-preview__food-pic" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Фото корма для котов">
+          <a href="form.html" class="product-preview__btn-program btn btn--green">Подобрать программу</a>
         </div>
-        <img class="product-preview__food-pic" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Фото корма для котов">
-        <a href="form.html" class="product-preview__btn-program btn--green">Подобрать программу</a>
       </div>
-      <ul class="programs">
+      <ul class="programs container">
         <li class="programs__item">
           <h2 class="programs__title programs__title--slim">Похудение</h2>
           <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a href="#" class="programs__catalog-link">Каталог Slim</a>
         </li>
-        <li class="programs__item">
+        <li class="programs__item programs__item--last-item">
           <h2 class="programs__title programs__title--pro">Набор массы</h2>
           <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a href="#" class="programs__catalog-link">Каталог Pro</a>
         </li>
       </ul>
-      <section class="advantages">
+      <section class="advantages container">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list">
-          <li class="advantages__item advantages__item--healthy">Функциональное питание содержит только полезные питательные вещества.</li>
-          <li class="advantages__item advantages__item--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-          <li class="advantages__item advantages__item--food-amount">Замените один-два приема обычной еды на наше функциональное питание.</li>
-          <li class="advantages__item advantages__item--month-later">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          <li class="advantages__item advantages__item--healthy" data-attr="1">Функциональное питание содержит только полезные питательные вещества.</li>
+          <li class="advantages__item advantages__item--powder" data-attr="2">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li class="advantages__item advantages__item--food-amount" data-attr="3">Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li class="advantages__item advantages__item--month-later advantages__item--last-item" data-attr="4">Уже через месяц наслаждайтесь изменениями к лучшему <br>вашего питомца!</li>
         </ul>
       </section>
       <section class="example">
-        <div class="example__main-wrapper example__main-wrapper--left"> <!-- Целесообразность обертки? -->
+        <div class="example__main-wrapper example__main-wrapper--left">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-          <div class="example__wrapper-table"> <!-- Целесообразность обертки? -->
-            <div class="example__wrapper">
+          <div class="example__second-wrapper">
+            <div class="example__terms-wrapper">
               <dl class="example__weight">
                 <dt class="example__term">5 кг</dt>
                 <dd class="example__definition">Снижение веса</dd>
@@ -110,13 +112,19 @@
                 <dd class="example__definition">Затрачено времени</dd>
               </dl>
             </div>
-            <p class="example__spent-money">Затраты на питание: 15 000 руб.</p>
+            <p class="example__spent-money">Затраты на питание: <span>15 000 руб.</span></p>
           </div>
         </div>
-        <div class="example__main-wrapper example__main-wrapper--right"> <!-- Целесообразность обертки? -->
-          <img class="example__before" src="img/before-mobile@1x.png" width="311" height="232" alt="Борис до программы">
-          <!-- <img class="example__after"  src="" width="251" height="240" alt="Борис после программы"> -->
-          <div class="example__container">
+        <div class="example__main-wrapper example__main-wrapper--right">
+          <div class="example__photo-wrapper">
+            <div class="example__before">
+              <img class="example__before-image" src="img/before-mobile@1x.png" width="311" height="232" alt="Борис до программы">
+            </div>
+            <div class="example__after">
+              <img class="example__after-image" src="img/after-mobile@1x.png" width="251" height="240" alt="Борис после программы">
+            </div>
+          </div>
+          <div class="example__switch-to-compare">
             <span class="example__before-text">Было</span>
             <div class="example__range">
               <div class="example__slider example__slider--white-back">
@@ -131,12 +139,12 @@
         <div class="contacts__wrapper">
           <h2 class="contacts__title visually-hidden">Адрес нашего магазаина</h2>
           <p class="contacts__invite">Приглашаем<br>к сотрудничеству дилеров!</p>
-          <p class="contacts__detailed">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <p class="contacts__detailed">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
         <img class="contacts__on-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Адрес на карте">
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer container">
       <a href="#" class="page-footer__logo">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="128" height="24" viewBox="0 0 127.8 23.4" style="enable-background:new 0 0 127.8 23.4;" xml:space="preserve">
           <style type="text/css">
@@ -182,7 +190,7 @@
       </ul>
       <p class="page-footer__copyright copyright"> HTML Academy
         <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">
-          <svg xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="0 0 60 60">
+          <svg xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="10 10 40 40">
             <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
           </svg>
         </a>
