--- a/source/index.html
+++ b/source/index.html
@@ -84,7 +84,7 @@
         </li>
         <li class="programs__item programs__item--last-item">
           <h2 class="programs__title programs__title--pro">Набор массы</h2>
-          <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <p class="programs__description programs__description--width">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a href="#" class="programs__catalog-link">Каталог Pro</a>
         </li>
       </ul>
