--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,7 +39,7 @@
         </ul>
       </nav>
     </header>
-    <main class="page-main">
+    <main class="page-main catalog-page">
       <section class="product-catalog">
         <h2 class="product-catalog__title">Каталог продукции</h2>
         <div class="product-catalog__wrapper">
